syntax = "proto3";
package proto;

message Statement {
  string id = 1;
  string publisher = 2;
  string namespace = 3;
  
  oneof body {
    SimpleStatement simple = 4;
    CompoundStatement compound = 5;
    ArchiveStatement archive = 6;
    Statement envelope = 7;
  }
  bytes sig = 8;
}

message SimpleStatement {
  string object = 1;
  repeated string refs = 2;
  repeated string tags = 3;
}

message CompoundStatement {
  repeated SimpleStatement statements = 1;
}

message ArchiveStatement {

}
